# necromancer-patterns

./: NOTICE  README.md  pyproject.toml
necromancer_patterns/: __init__.py  matcher.py  patterns.py
tests/: test_matcher.py  test_patterns.py
