[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "necromancer-patterns"
version = "0.2.0"
description = "Shared credential and secret detection patterns for the necromancer suite"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Bugsy Hewitt" }]
keywords = ["security", "credential-scanning", "secret-detection", "regex", "necromancer"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/bugsyhewitt/necromancer-patterns"

[tool.setuptools.packages.find]
where = ["."]
include = ["necromancer_patterns*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
